W07 - fixing contrast erros

--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -41,7 +41,7 @@ h1 {
   font-size: 0.7em;
   margin: -0.5rem 0 1rem 0;
   font-style: italic;
-  color: rgb(255, 255, 255, 0.6);
+  color: rgb(255, 255, 255, 0.7);
 }
 
 h2 {
